--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Control Center - Data Fix</title>
+    <title>Library Admin Control</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -16,55 +16,61 @@
         .card { background: white; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.05); padding: 25px; margin-bottom: 25px; }
         .card-header { font-weight: 600; color: var(--blue); border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; margin-bottom: 20px; display: flex; justify-content: space-between; }
         table { width: 100%; border-collapse: collapse; }
-        th { text-align: left; padding: 12px; color: #64748b; font-size: 11px; text-transform: uppercase; background: #f8fafc; }
+        th { text-align: left; padding: 12px; background: #f8fafc; font-size: 11px; text-transform: uppercase; color: #64748b; }
         td { padding: 12px; border-bottom: 1px solid #f1f5f9; font-size: 13px; }
-        .clickable-row { cursor: pointer; transition: 0.2s; }
-        .clickable-row:hover { background: #eff6ff; }
-        #user-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.5); backdrop-filter: blur(5px); z-index: 1000; display: flex; align-items: center; justify-content: center; }
-        .modal { background: white; width: 95%; max-width: 900px; height: 85vh; border-radius: 30px; overflow-y: auto; padding: 30px; position: relative; }
-        .close-btn { position: absolute; top: 20px; right: 20px; background: #ef4444; color: white; border: none; padding: 8px 15px; border-radius: 10px; cursor: pointer; }
-        .folder-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-bottom: 30px; }
-        .folder { padding: 20px; border-radius: 15px; background: #f8fafc; border: 2px solid #e2e8f0; cursor: pointer; text-align: center; }
-        .folder:hover { border-color: var(--blue); background: white; }
-        .badge { padding: 4px 10px; border-radius: 6px; font-size: 11px; font-weight: 600; }
-        .online { background: #dcfce7; color: #166534; }
-        .offline { background: #f1f5f9; color: #64748b; }
-        .status-returned { color: #22c55e; font-weight: bold; }
-        .status-active { color: #ef4444; font-weight: bold; }
+        .btn-sm { padding: 5px 10px; border-radius: 6px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; margin-right: 2px; }
+        .btn-blue { background: #dbeafe; color: #1e40af; }
+        .btn-purple { background: #f3e8ff; color: #6b21a8; }
+        .modal { background: white; width: 95%; max-width: 800px; border-radius: 25px; padding: 30px; position: relative; }
+        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 1000; display: flex; align-items: center; justify-content: center; }
+        .search-box { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid #ddd; margin-bottom: 15px; }
     </style>
 </head>
 <body>
 
-<div id="admin-main" class="container">
+<div class="container">
     <div class="card">
-        <div class="card-header">
-            <span>👥 Registered Members</span>
-            <small id="live-indicator">Connected to Database</small>
-        </div>
+        <div class="card-header">📂 Content Management (PDF Control)</div>
+        <table>
+            <thead><tr><th>PDF Name</th><th>Type</th><th>Actions</th></tr></thead>
+            <tbody id="pdfList">
+                <tr>
+                    <td>Science Textbook</td>
+                    <td>Read Online</td>
+                    <td>
+                        <button class="btn-sm btn-blue" onclick="markBook('science', 'recent')">Recent</button>
+                        <button class="btn-sm btn-blue" onclick="markBook('science', 'trending')">Trending</button>
+                        <button class="btn-sm btn-purple" onclick="openFacultyModal('science')">Recommend</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Math Lesson Plan</td>
+                    <td>Read Online</td>
+                    <td>
+                        <button class="btn-sm btn-blue" onclick="markBook('math', 'recent')">Recent</button>
+                        <button class="btn-sm btn-blue" onclick="markBook('math', 'trending')">Trending</button>
+                        <button class="btn-sm btn-purple" onclick="openFacultyModal('math')">Recommend</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="card">
+        <div class="card-header">👥 Registered Members & Live Status</div>
         <table id="memberTable">
-            <thead>
-                <tr><th>Status</th><th>Name</th><th>Email</th><th>Institution</th><th>Action</th></tr>
-            </thead>
+            <thead><tr><th>Status</th><th>Name</th><th>Email</th><th>Action</th></tr></thead>
             <tbody></tbody>
         </table>
     </div>
 </div>
 
-<div id="user-overlay" class="hidden">
+<div id="overlay" class="hidden">
     <div class="modal">
-        <button class="close-btn" onclick="closeUserDetail()">Close</button>
-        <h2 id="m-user-name">User Details</h2>
-        <p id="m-user-email" style="color: #64748b; margin-top:-10px;"></p>
-
-        <div class="folder-grid">
-            <div class="folder" onclick="showSubDetail('app-timings')">📂 <h4>App Usage Timings</h4></div>
-            <div class="folder" onclick="showSubDetail('borrowed-books')">📂 <h4>Borrowed Books</h4></div>
-            <div class="folder" onclick="showSubDetail('borrow-codes')">📂 <h4>Borrow Code</h4></div>
-        </div>
-
-        <div id="sub-detail-content" class="card" style="min-height: 300px;">
-            <p style="text-align: center; color: #94a3b8;">Select a category above</p>
-        </div>
+        <h3>Recommend to Faculty</h3>
+        <input type="text" id="facSearch" class="search-box" placeholder="Search Faculty Name..." onkeyup="filterFaculty()">
+        <div id="facList" style="max-height: 250px; overflow-y: auto;"></div>
+        <button onclick="closeModal()" style="margin-top:15px; background:#eee; border:none; padding:10px; border-radius:10px; width:100%; cursor:pointer;">Cancel</button>
     </div>
 </div>
 
@@ -81,10 +87,6 @@
     const db = firebase.firestore();
     const auth = firebase.auth();
 
-    let selectedUser = null;
-    let userLogs = [];
-    let userBorrows = [];
-
     auth.onAuthStateChanged(user => {
         if(user && user.email === "phlagongkk@gmail.com") { loadMembers(); }
         else if (user) { window.location.href = "index.html"; }
@@ -97,104 +99,41 @@
         snap.forEach(doc => {
             const u = doc.data();
             const lastActive = u.lastActive ? new Date(u.lastActive).getTime() : 0;
-            const isOnline = (Date.now() - lastActive) < 180000;
-            const row = document.createElement('tr');
-            row.className = "clickable-row";
-            row.onclick = () => openUserDetail(u);
-            row.innerHTML = `
-                <td><span class="badge ${isOnline ? 'online' : 'offline'}">${isOnline ? 'Online' : 'Offline'}</span></td>
+            const isOnline = (Date.now() - lastActive) < 180000; //
+            tbody.innerHTML += `<tr>
+                <td><span style="color:${isOnline?'green':'gray'}">● ${isOnline?'Online':'Offline'}</span></td>
                 <td><b>${u.fullName}</b></td>
                 <td>${u.email}</td>
-                <td>${u.institution || 'N/A'}</td>
-                <td style="color: var(--blue); font-weight:600;">View Folders →</td>
-            `;
-            tbody.appendChild(row);
+                <td><button class="btn-sm btn-blue" onclick="alert('View folders coming soon')">View Log</button></td>
+            </tr>`;
         });
     }
 
-    async function openUserDetail(user) {
-        selectedUser = user;
-        document.getElementById('m-user-name').innerText = user.fullName;
-        document.getElementById('m-user-email').innerText = user.email;
-        document.getElementById('user-overlay').classList.remove('hidden');
-        document.getElementById('sub-detail-content').innerHTML = `<p style="text-align: center;">Opening Folders for ${user.fullName}...</p>`;
-
-        // Fetch logs by User Email (more reliable than name)
-        const logSnap = await db.collection("activity_logs").where("userEmail", "==", user.email).get();
-        // If no email logs found, fallback to name (for older records)
-        if (logSnap.empty) {
-            const fallbackSnap = await db.collection("activity_logs").where("userName", "==", user.fullName).get();
-            userLogs = fallbackSnap.docs.map(d => d.data());
-        } else {
-            userLogs = logSnap.docs.map(d => d.data());
-        }
-
-        const borrowSnap = await db.collection("borrows").where("userId", "==", user.uid).get();
-        userBorrows = borrowSnap.docs.map(d => d.data());
-        
-        showSubDetail('app-timings');
+    async function markBook(bookId, category) {
+        await db.collection("library_settings").doc(bookId).set({ [category]: true }, { merge: true });
+        alert("Success: " + category);
     }
 
-    function showSubDetail(folder) {
-        const content = document.getElementById('sub-detail-content');
-        content.innerHTML = "";
-
-        if(folder === 'app-timings') {
-            let appSecs = 0, readSecs = 0, borrowReadSecs = 0;
-            userLogs.forEach(l => {
-                let parts = l.duration.match(/\d+/g);
-                let s = 0;
-                if(parts && parts.length >= 2) {
-                    s = (parseInt(parts[0])*60) + parseInt(parts[1]); //
-                } else if (parts && parts.length === 1) {
-                    s = parseInt(parts[0]) * 60; // Case for "6 min"
-                }
-
-                if(l.activityType === "Total App Usage") appSecs += s;
-                else if(l.activityType.includes("Preview")) readSecs += s;
-                else if(l.activityType.includes("Borrowed")) borrowReadSecs += s;
-            });
-
-            content.innerHTML = `
-                <div style="padding:15px; border-bottom:1px solid #eee; display:flex; justify-content:space-between;">
-                    <b>Total App Timing</b> <span>${Math.floor(appSecs/60)}m ${appSecs%60}s</span>
-                </div>
-                <div style="padding:15px; border-bottom:1px solid #eee; display:flex; justify-content:space-between;">
-                    <b>Read Online Timing (Previews)</b> <span>${Math.floor(readSecs/60)}m ${readSecs%60}s</span>
-                </div>
-                <div style="padding:15px; display:flex; justify-content:space-between;">
-                    <b>Borrowed Books Reading Time</b> <span>${Math.floor(borrowReadSecs/60)}m ${borrowReadSecs%60}s</span>
-                </div>
-            `;
-        } 
-        else if(folder === 'borrowed-books') {
-            let html = `<table><thead><tr><th>Book Title</th><th>Borrow Status</th><th>Action Taken</th></tr></thead><tbody>`;
-            
-            userBorrows.forEach(b => {
-                html += `<tr>
-                    <td>${b.title}</td>
-                    <td class="status-active">Active Borrow</td>
-                    <td>Due: ${new Date(b.expiresOn).toLocaleDateString()}</td>
-                </tr>`;
-            });
-
-            userLogs.filter(l => l.activityType.includes("Borrowed")).forEach(bl => {
-                html += `<tr>
-                    <td>${bl.activityType.replace("Reading: Borrowed: ", "")}</td>
-                    <td>History</td>
-                    <td>Accessed on ${new Date(bl.timestamp).toLocaleDateString()}</td>
-                </tr>`;
-            });
-
-            content.innerHTML = (html === `<table><thead><tr><th>Book Title</th><th>Borrow Status</th><th>Action Taken</th></tr></thead><tbody>`) 
-                ? "<p style='text-align:center;'>No records found.</p>" : html + "</tbody></table>";
-        }
-        else if(folder === 'borrow-codes') {
-            content.innerHTML = `<p style='text-align:center;'><b>Current Library Code:</b> BORROW2026</p>`;
-        }
+    let bookToRec = "";
+    async function openFacultyModal(bookId) {
+        bookToRec = bookId;
+        document.getElementById('overlay').classList.remove('hidden');
+        const snap = await db.collection("users").where("position", "==", "faculty").get(); //
+        const list = document.getElementById('facList');
+        list.innerHTML = "";
+        snap.forEach(doc => {
+            const f = doc.data();
+            list.innerHTML += `<div onclick="assignFac('${f.uid}', '${f.fullName}')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee;">${f.fullName}</div>`;
+        });
     }
 
-    function closeUserDetail() { document.getElementById('user-overlay').classList.add('hidden'); }
+    async function assignFac(uid, name) {
+        await db.collection("recommendations").doc(bookToRec).set({ facultyId: uid, facultyName: name, bookId: bookToRec }, { merge: true });
+        alert("Assigned to " + name);
+        closeModal();
+    }
+
+    function closeModal() { document.getElementById('overlay').classList.add('hidden'); }
 </script>
 </body>
 </html>
